Fix regression with CJK wide chars at cursor

Commit 76f879cd7 changed greatly the way konsole renders text, to fix
some long-standing issues with RTL text, non-monospaced fonts, ...

Unfortunately, it also introduced a regression for CJK wide character
rendering, where it does not take properly into account their width.

BUG: 463031